# civitas

./: .env.example  .gitignore  CREDITS.md  DEPLOYMENT.md  README.md  civitas.db  civitas.db-shm  civitas.db-wal  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  security.yml
docs/: RESISTANCE_FRAMEWORK.md  data-sources.md
prompts/carl/: insight_system.txt  justice_profile_system.txt  objective_title_system.txt  resistance_analysis_system.txt  resistance_recommend_system.txt
scripts/: batch_generation.sh  carl_batch_generation.sh  deploy.sh  deploy_to_carl.sh  download_internet_archive.py  download_openstates_bulk.sh  extract_authors_from_text.py  extract_p2025_from_text.py  extract_p2025_policies.py  fix_data_gaps.py  full_ingestion.sh  generate_resistance_expert_content.sh  generate_scotus_profiles.sh  link_all_opinions.py  local_batch_generation.sh  log_stats.sh  scrape_historical_scotus.py  seed_p2025_policies.py  setup_postgres.py  test_california_api.py  test_congress_api.py
scripts/systemd/: civitas-batch.service  civitas-carl-batch.service  civitas-stats.service  civitas-stats.timer
src/civitas/: __init__.py  cli.py
src/civitas/ai/: __init__.py  prompts.py  query.py
src/civitas/analysis/: __init__.py  actions.py  analyzer.py  categories.py  resistance.py
src/civitas/api/: __init__.py  deps.py  main.py  schemas.py  utils.py
src/civitas/api/routers/: __init__.py  cases.py  executive_orders.py  justices.py  legislation.py  objectives.py  resistance.py  search.py  states.py  status.py
src/civitas/attorneys_general/: __init__.py  scraper.py
src/civitas/california/: __init__.py  client.py  models.py
src/civitas/citations/: __init__.py  extractor.py  models.py
src/civitas/congress/: __init__.py  client.py  models.py
src/civitas/courts/: __init__.py  client.py  models.py
src/civitas/db/: __init__.py  ingest.py  models.py  search.py
src/civitas/executive/: __init__.py  client.py  models.py
src/civitas/insights/: __init__.py  generator.py
src/civitas/lawcodes/: __init__.py  constitutions.py  uscode.py
src/civitas/processing/: __init__.py  chunker.py  detector.py  docx.py  html.py  normalizer.py  pdf.py  xml.py
src/civitas/project2025/: __init__.py  parser.py  titles.py  tracker.py
src/civitas/research/: __init__.py  storm_integration.py
src/civitas/resistance/: __init__.py  analyzer.py  content.py  recommender.py  tracker.py
src/civitas/scotus/: __init__.py  case_analyzer.py  client.py  historical.py  justices.py  models.py  profiles.py
src/civitas/search/: __init__.py
src/civitas/sources/: __init__.py  documentcloud.py  internet_archive.py  muckrock.py
src/civitas/states/: __init__.py  bulk_ingest.py  openstates.py  p2025_matcher.py  scheduler.py
src/civitas/states/scrapers/: __init__.py  base.py  california.py  new_york.py
src/civitas/storage/: __init__.py  azure_blob.py
src/civitas/utils/: __init__.py  pdf_processor.py
src/civitas/workflows/: __init__.py  activities.py  baynavigator.py  client.py  content.py  ingestion.py  worker.py
tests/: conftest.py  test_api_metadata.py  test_db_models.py  test_search.py
web/: .env.example  .env.production  .gitignore  eslint.config.mjs  next-sitemap.config.js  next.config.js  package-lock.json  package.json  payload-types.ts  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  wrangler.jsonc
web/src/: middleware.ts  proxy.ts
web/src/app/: globals.css  layout.tsx
web/src/app/(frontend)/: layout.tsx  page.tsx
web/src/app/(frontend)/cases/[id]/: page.tsx
web/src/app/(frontend)/justices/: page.tsx
web/src/app/(frontend)/resistance/: page.tsx
web/src/app/(frontend)/states/: page.tsx
web/src/app/(frontend)/stats/: page.tsx
web/src/app/(frontend)/timeline/: page.tsx
web/src/app/(frontend)/tracker/: page.tsx
web/src/app/(payload)/: layout.tsx
web/src/app/(payload)/admin/: importMap.ts
web/src/app/og/: route.tsx
web/src/components/: CsvExport.tsx  JsonLd.tsx
web/src/components/dashboard/: ActionAlertBanner.tsx  CategoryBreakdown.tsx  DashboardData.tsx  DynamicCategoryBreakdown.tsx  RecentActivity.tsx  StatsGrid.tsx  ThreatMeter.tsx
web/src/components/layout/: Footer.tsx  Header.tsx  ThemeToggle.tsx
web/src/components/states/: USMap.tsx
web/src/components/ui/: badge.tsx  button.tsx  progress.tsx
web/src/lib/: api.ts  hooks.ts  utils.ts
web/src/payload/: payload.config.ts
web/src/payload/collections/: ActionAlerts.ts  Articles.ts  Media.ts  Pages.ts  SiteSettings.ts  Users.ts
web/tests/e2e/: site-smoke.spec.ts
(+6 files in other folders)
