[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civitas"
version = "0.1.0"
description = "Civic empowerment platform for referencing Supreme Court rulings and enacted legislation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "TBD"}
authors = [
    {name = "Bay Tides"}
]
keywords = ["civic", "legal", "legislation", "supreme-court", "congress", "political"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "rich>=13.0",
    "typer>=0.9",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
analysis = [
    "pandas>=2.0",
    "networkx>=3.0",
]
# AI via Ollama (Llama on Azure)
ai = [
    "ollama>=0.4",
]
# Free Law Project tools (BSD-licensed)
courts = [
    "pdfplumber>=0.10",
    "eyecite>=2.6",
    "courts-db>=0.10",
]
# Azure cloud storage
azure = [
    "azure-storage-blob>=12.0",
]
# US state metadata
civic = [
    "us>=3.0",
]
# Open Civic Data tools
openstates = [
    "pyopenstates>=2.0",
]
# Document processing
processing = [
    "PyMuPDF>=1.23",
    "ocrmypdf>=16.0",
    "trafilatura>=1.6",
    "python-docx>=1.0",
    "chardet>=5.0",
]
# PostgreSQL support
postgres = [
    "psycopg2-binary>=2.9",
]
# Temporal workflow orchestration
temporal = [
    "temporalio>=1.7.0",
]
# All optional dependencies
all = [
    "ollama>=0.4",
    "pdfplumber>=0.10",
    "eyecite>=2.6",
    "courts-db>=0.10",
    "azure-storage-blob>=12.0",
    "us>=3.0",
    "pandas>=2.0",
    "networkx>=3.0",
    "pyopenstates>=2.0",
    "PyMuPDF>=1.23",
    "ocrmypdf>=16.0",
    "trafilatura>=1.6",
    "python-docx>=1.0",
    "chardet>=5.0",
    "psycopg2-binary>=2.9",
    "temporalio>=1.7.0",
]

[project.scripts]
civitas = "civitas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/civitas/analysis/actions.py" = ["E501"]
"src/civitas/analysis/resistance.py" = ["E501"]
"src/civitas/ai/query.py" = ["E501"]
"src/civitas/cli.py" = ["E501"]
"src/civitas/db/models.py" = ["E501"]
"src/civitas/resistance/analyzer.py" = ["E501"]
"src/civitas/resistance/recommender.py" = ["E501"]
"src/civitas/resistance/tracker.py" = ["E501"]
"src/civitas/california/client.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
